src/Base/main/default/objects/WorkOrder/WorkOrder.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>