src/Base/main/default/objects/WorkOrder/fields/Boat_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Boat_Specialist__c</fullName>
    <formula>ERP_Order__r.Boat_Specialist__r.FirstName&amp;&quot; &quot;&amp; ERP_Order__r.Boat_Specialist__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boat Specialist</label>
    <type>Text</type>
</CustomField>