src/Base/main/default/objects/WorkOrder/fields/Calculated_Duration__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Duration__c</fullName>
    <description>The duration in minutes needed to complete all Line Items</description>
    <inlineHelpText>The duration in minutes needed to complete all Line Items</inlineHelpText>
    <label>Calculated Duration</label>
    <summarizedField>WorkOrderLineItem.DurationInMinutes</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>