src/Base/main/default/objects/WorkOrder/fields/Drop_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Date__c</fullName>
    <label>Drop Off Date</label>
    <type>DateTime</type>
</CustomField>