src/Base/main/default/objects/WorkOrder/fields/ERP_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Number__c</fullName>
    <label>ERP Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>