src/Base/main/default/objects/WorkOrder/fields/ERP_Warehouse_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Warehouse_ID__c</fullName>
    <formula>ERP_Order__r.GMBLASERP__Warehouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Warehouse ID</label>
    <type>Text</type>
</CustomField>