src/Base/main/default/objects/WorkOrder/fields/ERP_Warehouse_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Warehouse_Name__c</fullName>
    <formula>ERP_Order__r.GMBLASERP__Warehouse__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Warehouse Name</label>
    <type>Text</type>
</CustomField>