src/Base/main/default/objects/WorkOrder/fields/Location_Warehouse_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Warehouse_Id__c</fullName>
    <formula>Location.Warehouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Warehouse Id</label>
    <type>Text</type>
</CustomField>