src/Base/main/default/objects/WorkOrder/fields/Manufactured_Product__c.field-meta.xml
<CustomField>
    <fullName>Manufactured_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufactured Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Boat</value>
        </filterItems>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Trailer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Manufacturing Work Orders</relationshipLabel>
    <relationshipName>Manufacturing_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>