src/Base/main/default/objects/WorkOrder/fields/Manufacturing_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Product_Id__c</fullName>
    <formula>Serial_Number__r.GMBLASERP__Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturing Product Id</label>
    <type>Text</type>
</CustomField>