src/Base/main/default/objects/WorkOrder/fields/Pick_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Date__c</fullName>
    <label>Pick Up Date</label>
    <type>DateTime</type>
</CustomField>