src/Base/main/default/objects/WorkOrder/fields/Serial_Name__c.field-meta.xml
<CustomField>
    <fullName>Serial_Name__c</fullName>
    <formula>Serial_Number__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial Name</label>
    <type>Text</type>
</CustomField>