src/Base/main/default/objects/WorkOrder/fields/Sum_of_Durations_of_WOLIs__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Durations_of_WOLIs__c</fullName>
    <description>The duration in Hours needed to complete all Line Items</description>
    <inlineHelpText>The duration in Hours needed to complete all Line Items</inlineHelpText>
    <label>Sum of Durations of WOLIs</label>
    <summarizedField>WorkOrderLineItem.Duration</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>