src/Base/main/default/objects/WorkOrder/fields/Total_Price_Products_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Products_Consumed__c</fullName>
    <label>Total Price (Products Consumed)</label>
    <summarizedField>ProductConsumed.Total_Price__c</summarizedField>
    <summaryForeignKey>ProductConsumed.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>