src/Base/main/default/objects/WorkOrder/fields/WorkType_Name__c.field-meta.xml
<CustomField>
    <fullName>WorkType_Name__c</fullName>
    <formula>WorkType.Name</formula>
    <label>WorkType Name</label>
    <type>Text</type>
</CustomField>