src/Base/main/default/objects/WorkOrder/recordTypes/Manufacturing.recordType-meta.xml
<RecordType>
    <fullName>Manufacturing</fullName>
    <active>true</active>
    <description>User to create Manufacturing Work Orders</description>
    <label>Manufacturing</label>
</RecordType>