src/Base/main/default/objects/WorkOrder/recordTypes/Off_site_Service.recordType-meta.xml
<RecordType>
    <fullName>Off_site_Service</fullName>
    <active>true</active>
    <label>Off-site Service</label>
</RecordType>