src/Base/main/default/objects/WorkOrder/recordTypes/Partner_Sale.recordType-meta.xml
<RecordType>
    <fullName>Partner_Sale</fullName>
    <active>true</active>
    <description>Work Order for Sale of new Boat/Trailer to a Partner</description>
    <label>Partner Sale</label>
</RecordType>