src/Base/main/default/objects/WorkOrder/recordTypes/Retail_Sale.recordType-meta.xml
<RecordType>
    <fullName>Retail_Sale</fullName>
    <active>true</active>
    <description>Work Order for Sale of new Boat/Trailer</description>
    <label>Retail Sale</label>
</RecordType>