src/Base/main/default/objects/WorkOrder/recordTypes/Retail_Service.recordType-meta.xml
<RecordType>
    <fullName>Retail_Service</fullName>
    <active>true</active>
    <label>Retail Service</label>
</RecordType>