src/Base/main/default/objects/WorkOrder/recordTypes/Wholesale_Service.recordType-meta.xml
<RecordType>
    <fullName>Wholesale_Service</fullName>
    <active>true</active>
    <label>Wholesale Service</label>
</RecordType>